improved adherence to project specifications